# graycode

./: .gitignore  Cargo.toml  README.md  __init__.py  graycode.h  graycode.pyi
.github/workflows/: wheels.yml
src/: lib.rs
test/: script.py
