[package]
name = "graycode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
rayon = { version = "1.10", optional = true }

[features]
parallel = ["rayon"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
